# etfwind

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  backfill.py  fly.toml  pyproject.toml  requirements.txt  run_web.py  start.sh
.claude/: settings.json
.github/workflows/: analyze_news.yml  collect_news.yml  daily_news.yml  update_etf_master.yml
config/: etf_master.json
data/: latest.json
docs/: COMMODITY_CYCLE_PLAN.md  CONTRIB.md  RUNBOOK.md  bot-farm-guide.md
scripts/: auto_commit.sh  backfill_week.py  rebuild_reports.py  refresh_etf_desc.py  run_analysis.py  sync_secrets.sh  test_api.py  test_full_analysis.py  update_etf_master.py
src/: __init__.py  analyze_news.py  config.py  main.py  models.py  worker.py  worker_simple.py
src/analyzers/: __init__.py  claude_analyzer.py  incremental_analyzer.py  prompts.py  realtime.py
src/collectors/: __init__.py  base.py  bloomberg.py  cls_news.py  cls_playwright.py  cnbc.py  eastmoney.py  eastmoney_playwright.py  jin10.py  playwright_base.py  reuters.py  rss_base.py  sina_finance.py  stcn.py  wallstreetcn.py  wsj.py
src/invest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  schemas.py
src/notify/: __init__.py  wechat.py
src/publishers/: __init__.py  email_sender.py  local_report.py  wecom.py
src/services/: ai_client.py  fund_service.py  wordcloud_service.py
src/utils/: timezone.py
tests/: test_mock_flow.py
workers/: CLAUDE.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/src/: index.ts  types.ts
(+4 files in other folders)
